--- a/1-java-script/index.html
+++ b/1-java-script/index.html
@@ -6,6 +6,6 @@
     
 </head>
 <body>
-    <script src="js/2-variables.js"></script> 
+    <script src="js/3-function.js"></script> 
 </body>
 </html>
