--- a/1-java-script/index.html
+++ b/1-java-script/index.html
@@ -6,6 +6,6 @@
     
 </head>
 <body>
-    <script src="js/5-datatypes.js"></script> 
+    <script src="js/7-objects.js"></script> 
 </body>
 </html>
