--- a/1-java-script/index.html
+++ b/1-java-script/index.html
@@ -6,6 +6,6 @@
     
 </head>
 <body>
-    <script src="js/9a-operatory.js"></script> 
+    <script src="js/10-petle.js"></script> 
 </body>
 </html>
