--- a/2-js-dom/index.html
+++ b/2-js-dom/index.html
@@ -35,6 +35,6 @@ onclick="alert('kliknięto link');" -->
         <a class="link superlink" href="#">Link 4</a>
 
     </section>
-    <script src="js/1-model-dom.js"></script>   
+    <script src="js/2-znajdowanie-elementow.js"></script>   
 </body>
 </html>
