--- a/2-js-dom/index.html
+++ b/2-js-dom/index.html
@@ -26,7 +26,10 @@ onclick="alert('kliknięto link');" -->
         </div>
 
         <div id="parSecond" >
-            <p>Tekst w tym akapicie.</p>
+            <p>Tekst w tym poniższym akapicie.</p>
+            <p>lorem 1</p>
+            <p>lorem 2</p>
+            <p>lorem 3</p>
         </div>
 
         <a class="link" href="http://akademia108.pl">Link 1</a>
@@ -35,6 +38,6 @@ onclick="alert('kliknięto link');" -->
         <a class="link superlink" href="#">Link 4</a>
 
     </section>
-    <script src="js/4-teorzenie-dodawanie.js"></script>   
+    <script src="js/5-manipulacja-dom.js"></script>   
 </body>
 </html>
