--- a/2-js-dom/index.html
+++ b/2-js-dom/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <section id="sectionFirst">
+        
+        <h2>To jest h2 - lorem ipsum dolor......</h2>
 
         <header>
             <p>paragraf</p>
@@ -32,12 +34,12 @@ onclick="alert('kliknięto link');" -->
             <p>lorem 3</p>
         </div>
 
-        <a class="link" href="http://akademia108.pl">Link 1</a>
+        <a id="super-link" class="link" href="http://akademia108.pl">Link 1</a>
         <a class="link" href="#">Link 2</a>
         <a class="link superlink" href="#">Link 3</a>
         <a class="link superlink" href="#">Link 4</a>
 
     </section>
-    <script src="js/5-manipulacja-dom.js"></script>   
+    <script src="js/6-zdarzenia-events.js"></script>   
 </body>
 </html>
